--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -1,63 +1,52 @@
-<!DOCTYPE html>
-<html>
+<html><head><style type="text/css">
+    canvas { background: blue; }
+</style>
 
-<button id = "ButtonX">Rotate X</button>
-<button id = "ButtonY">Rotate Y</button>
-<button id = "ButtonZ">Rotate Z</button>
-<button id = "ButtonT">Toggle Rotation</button>
-
+</head><body><button id="ButtonX">Rotate X</button>
+<button id="ButtonY">Rotate Y</button>
+<button id="ButtonZ">Rotate Z</button>
+<button id="ButtonT">Toggle Rotatation</button>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 #version 300 es
 
-in  vec4 aPosition;
-in  vec3 aNormal;
-out vec4 vColor;
+in vec4 aPosition;
+in vec4 aColor;
+in vec2 aTexCoord;
 
-uniform vec4 uAmbientProduct, uDiffuseProduct, uSpecularProduct;
-uniform mat4 uModelViewMatrix;
-uniform mat4 uProjectionMatrix;
-uniform vec4 uLightPosition;
-uniform float uShininess;
+out vec4 vColor;
+out vec2 vTexCoord;
+
+uniform vec3 uTheta;
 
 void main()
 {
+    // Compute the sines and cosines of theta for each of
+    //   the three axes in one computation.
+    vec3 angles = radians(uTheta);
+    vec3 c = cos(angles);
+    vec3 s = sin(angles);
 
+    // Remeber: thse matrices are column-major
+    mat4 rx = mat4(1.0,  0.0,  0.0, 0.0,
+		    0.0,  c.x,  s.x, 0.0,
+		    0.0, -s.x,  c.x, 0.0,
+		    0.0,  0.0,  0.0, 1.0);
 
-    vec3 pos = -(uModelViewMatrix * aPosition).xyz;
+    mat4 ry = mat4(c.y, 0.0, -s.y, 0.0,
+		    0.0, 1.0,  0.0, 0.0,
+		    s.y, 0.0,  c.y, 0.0,
+		    0.0, 0.0,  0.0, 1.0);
 
-    //fixed light postion
+    mat4 rz = mat4(c.z, s.z, 0.0, 0.0,
+		    -s.z,  c.z, 0.0, 0.0,
+		    0.0,  0.0, 1.0, 0.0,
+		    0.0,  0.0, 0.0, 1.0);
 
-    vec3 light = uLightPosition.xyz;
-    vec3 L = normalize(light - pos);
-
-
-    vec3 E = normalize(-pos);
-    vec3 H = normalize(L + E);
-
-    vec4 NN = vec4(aNormal,0);
-
-    // Transform vertex normal into eye coordinates
-
-    vec3 N = normalize((uModelViewMatrix*NN).xyz);
-
-    // Compute terms in the illumination equation
-    vec4 ambient = uAmbientProduct;
-
-    float Kd = max(dot(L, N), 0.0);
-    vec4  diffuse = Kd*uDiffuseProduct;
-
-    float Ks = pow( max(dot(N, H), 0.0), uShininess );
-    vec4  specular = Ks * uSpecularProduct;
-
-    if( dot(L, N) < 0.0 ) {
-	  specular = vec4(0.0, 0.0, 0.0, 1.0);
-    }
-
-    gl_Position = uProjectionMatrix * uModelViewMatrix *aPosition;
-    vColor = ambient + diffuse +specular;
-
-    vColor.a = 1.0;
+    vColor = aColor;
+    vTexCoord = aTexCoord;
+    gl_Position = rz * ry * rx * aPosition;
+    gl_Position.z = -gl_Position.z;
 }
 </script>
 
@@ -66,14 +55,18 @@ void main()
 
 precision mediump float;
 
-
 in vec4 vColor;
+in vec2 vTexCoord;
+
 out vec4 fColor;
+
+uniform sampler2D uTextureMap;
 
 void
 main()
 {
-    fColor = vColor;
+    //fColor = vColor * texture(uTextureMap, vTexCoord);
+    fColor = texture(uTextureMap, vTexCoord);
 }
 </script>
 
@@ -81,9 +74,12 @@ main()
 <script type="text/javascript" src="../Common/MVnew.js"></script>
 <script type="text/javascript" src="Assignment6.js"></script>
 
-<body>
-<canvas id="gl-canvas" width="512" height="512">
+
+
+<canvas id="gl-canvas" width="1024" height="1024">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-</body>
-</html>
+<img id="texImage" src="tiger.png" hidden="">
+
+
+</body></html>
