Photos of Faces Changed

--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -2,7 +2,8 @@
     canvas { background: blue; }
 </style>
 
-</head><body><button id="ButtonX">Rotate X</button>
+</head><body>
+<button id="ButtonX">Rotate X</button>
 <button id="ButtonY">Rotate Y</button>
 <button id="ButtonZ">Rotate Z</button>
 <button id="ButtonT">Toggle Rotatation</button>
@@ -79,7 +80,7 @@ main()
 <canvas id="gl-canvas" width="1024" height="1024">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-<img id="texImage" src="tiger.png" hidden="">
+<img id="texImage" src="frontOfhead.jpeg">
 
 
 </body></html>
