--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -80,7 +80,7 @@ main()
 <canvas id="gl-canvas" width="1024" height="1024">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-<img id="texImage" src="frontOfhead.jpeg">
+<img id="texImage" src="frontOfhead.jpg">
 
 
 </body></html>
