--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html>
-<style type="text/css">
-    canvas { background: blue; }
-</style>
+<head>
+    <title>Texture Mapping</title>
+</head>
 <body>
-
-<canvas id="gl-canvas" width="1024" height="1024"> </canvas>
-
-<img id = "texImage" src = "tiger.png" hidden></img>
-
-<button id = "ButtonX">Rotate X</button>
-<button id = "ButtonY">Rotate Y</button>
-<button id = "ButtonZ">Rotate Z</button>
-<button id = "ButtonT">Toggle Rotatation</button>
+<canvas id="gl-canvas" width="512" height="512"> </canvas>
+<img id = "texImage" src = "faceTest.jpg" hidden></img>
+<div>
+    <button id = "ButtonX">Rotate X</button>
+    <button id = "ButtonY">Rotate Y</button>
+    <button id = "ButtonZ">Rotate Z</button>
+    <button id = "ButtonT">Toggle Rotatation</button>
+</div>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 #version 300 es
 
 in vec4 aPosition;
-in vec4 aColor;
 in vec2 aTexCoord;
+in vec3 aNormal;
+in vec4 aColor;
 
 out vec4 vColor;
 out vec2 vTexCoord;
 
-uniform vec3 uTheta;
+uniform mat4 uModelViewMatrix;
+uniform mat4 uProjectionMatrix;
+uniform vec4 uAmbientProduct, uDiffuseProduct, uSpecularProduct;
+uniform vec4 uLightPosition;
+uniform float uShininess;
 
 void main()
-{
-    // Compute the sines and cosines of theta for each of
-    //   the three axes in one computation.
-    vec3 angles = radians(uTheta);
-    vec3 c = cos(angles);
-    vec3 s = sin(angles);
+{ 
+    vec3 pos = aPosition.xyz;
 
-    // Remeber: thse matrices are column-major
-    mat4 rx = mat4(1.0,  0.0,  0.0, 0.0,
-		    0.0,  c.x,  s.x, 0.0,
-		    0.0, -s.x,  c.x, 0.0,
-		    0.0,  0.0,  0.0, 1.0);
+    //light postion
+    vec3 light = uLightPosition.xyz;
 
-    mat4 ry = mat4(c.y, 0.0, -s.y, 0.0,
-		    0.0, 1.0,  0.0, 0.0,
-		    s.y, 0.0,  c.y, 0.0,
-		    0.0, 0.0,  0.0, 1.0);
+    vec3 L = normalize(light - pos);
+    vec3 E = normalize(-pos);
+    vec3 H = normalize(L + E);
+    vec4 NN = vec4(aNormal,0);
 
-    mat4 rz = mat4(c.z, s.z, 0.0, 0.0,
-		    -s.z,  c.z, 0.0, 0.0,
-		    0.0,  0.0, 1.0, 0.0,
-		    0.0,  0.0, 0.0, 1.0);
+    // Transform vertex normal into eye coordinates
+    vec3 N = normalize((uModelViewMatrix*NN).xyz);
 
-    vColor = aColor;
+    // Compute terms in the illumination equation
+    vec4 ambient = uAmbientProduct;
+
+    float Kd = max(dot(L, N), 0.0);
+    vec4  diffuse = Kd * uDiffuseProduct;
+
+    float Ks = pow( max(dot(N, H), 0.0), uShininess );
+    vec4 specular = Ks * uSpecularProduct;
+
+    if( dot(L, N) < 0.0 ) {
+        specular = vec4(0.0, 0.0, 0.0, 1.0);
+    }
+    gl_Position = uProjectionMatrix * uModelViewMatrix *aPosition;
     vTexCoord = aTexCoord;
-    gl_Position = rz * ry * rx * aPosition;
-    gl_Position.z = -gl_Position.z;
+    vColor = ambient + diffuse + specular + aColor;
+    vColor.a = 1.0; 
 }
 </script>
 
@@ -61,25 +68,23 @@ void main()
 #version 300 es
 
 precision mediump float;
-
 in vec4 vColor;
 in vec2 vTexCoord;
 
 out vec4 fColor;
 
 uniform sampler2D uTextureMap;
+uniform vec4 uDiffuseProduct;
 
-void
-main()
+void main()
 {
-    //fColor = vColor * texture(uTextureMap, vTexCoord);
-    fColor = texture(uTextureMap, vTexCoord);
+    vec4 T = texture(uTextureMap, vTexCoord);
+    fColor = T * vColor;
 }
 </script>
 
 <script src="../Common/initShaders.js"></script>
-<script src="../Common/MVnew.js"></script>
+<script src="../Common/MV.js"></script>
 <script src="Assignment6.js"></script>
-
 </body>
 </html>
