--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <canvas id="gl-canvas" width="512" height="512"> </canvas>
-<img id = "texImage" src = "faceTest.jpg" hidden></img>
+<img id = "texImage" src = "faceTest.png" hidden></img>
 <div>
     <button id = "ButtonX">Rotate X</button>
     <button id = "ButtonY">Rotate Y</button>
