--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -1,3 +1,8 @@
+<!-- Name: Jimmy Kha 
+Student Number: 588541 
+CMPT 325: Fall 2021
+Assignment #6: WebGL Texture Mapping
+Due Date: December 13th, 2021 -->
 <!DOCTYPE html>
 <html>
 <head>
