--- a/Assignment6/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6/Assignment6.html
@@ -2,7 +2,7 @@
 Student Number: 588541 
 CMPT 325: Fall 2021
 Assignment #6: WebGL Texture Mapping
-Due Date: December 13th, 2021 -->
+Due Date: December 2nd, 2021 -->
 <!DOCTYPE html>
 <html>
 <head>
